--- a/main.html
+++ b/main.html
@@ -8,6 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>How I Will Use My Salary</h1>
+
+    <!-- Ordered List for shopping items -->
+    <h2>Things I want to buy with my salary:</h2>
+    <ol>
+        <li data-ns-test="shoppingList">New laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
+    </ol>
+
+    <!-- Unordered List for holiday destinations -->
+    <h2>Holiday destinations I'd love to visit:</h2>
+    <ul>
+        <li data-ns-test="holidayList">Bali, Indonesia</li>
+        <li data-ns-test="holidayList">Paris, France</li>
+        <li data-ns-test="holidayList">Tokyo, Japan</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
